fix checkbox center align

--- a/src/style.css
+++ b/src/style.css
@@ -212,10 +212,13 @@ td>select {
     .adapt textarea,
     .adapt select { width: 100%; }
 
+    .adapt td:has(input[type=checkbox]) {
+        text-align: center;
+    }
+
     .adapt input[type=checkbox] {
         width: 1.5em;
         height: 1.5em;
-        text-align: center;
     }
 
     .adapt table td:first-child { border-bottom: 0; }
